--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "members-search-api",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "8.11.3"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
